Add different implementation of CustomerRepository and CustomerFakeRepository