@@ -10,9 +10,16 @@ public class CustomerFakeRepository implements CustomerRepo {
 
     @Override
     public List<Customer> getCustomers() {
-        return Arrays.asList(
+        // 1. solution not recommended
+//        return Arrays.asList(
+//                new Customer(1L, "James Bond"),
+//                new Customer(2L, "Jamila Conc")
+//                );
+
+        // 2. solution supported from Java 9
+        return List.of(
                 new Customer(1L, "James Bond"),
                 new Customer(2L, "Jamila Conc")
-                );
+        );
     }
 }
