@@ -1,15 +1,30 @@
 package sk.balaz.springbootmaster.customer;
 
+import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Component;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 @Component
+@Primary
 public class CustomerRepository implements CustomerRepo {
     @Override
     public List<Customer> getCustomers() {
         //TODO connect to real DB
-        return Collections.emptyList();
+
+        // 1. solution supported before Java 9
+        //return Collections.emptyList();
+
+        // 2. solution supported before Java 9
+//        return Collections.singletonList(
+//                new Customer(1L, "TODO Implement real DB")
+//        );
+
+        // 3. solution supported after Java 9
+        return List.of(
+                new Customer(1L, "TODO Implement real DB")
+        );
     }
 }
